More updates to thoughts test

--- a/pages/thoughts.html
+++ b/pages/thoughts.html
@@ -60,7 +60,7 @@
 
     <!-- List of Projects, link to their own page, brief description here and one picture -->
     <div class='main'>
-      <div class='padding-2' class="min-width-100">
+      <div id = 'thoughts' class='padding-2 min-width-100'>
         <h1 class='portfolio-heading center-text'>thoughts</h1>
 
           <div class="padding-2 max-width-100">
@@ -68,11 +68,15 @@
             <div class="portfolio-item center">
               
               <div class="portfolio-desc width-100">
-                <!-- PUT STUFF HERE -->
+                <h2 class="margin-0">TITLE</h2>
+                <p class="margin-0">athaskjhak</p>
+                <p>athaskjhak</p>
               </div>
             </div>
   
           </div>
+
+          
     </div>
   </body>
 </html>
