--- a/pages/thoughts.html
+++ b/pages/thoughts.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous"></script>
 
     <!-- Javascript -->
-    <script type="text/json" src="../js/thoughts.json" defer></script>
+    <script type="text/json" src="../js/thoughtsHTML.json" defer></script>
     <script type="text/javascript" src="../js/thoughts.js" defer></script>
   </head>
   <body>
