--- a/pages/projects/meowlody.html
+++ b/pages/projects/meowlody.html
@@ -42,7 +42,7 @@
         
         <div class="subheader right">
           <p class="contact-text">
-            <a class="text-decoration-none" href="../../index.html">about</a>
+            <a class="text-decoration-none" href="../bio.html">about</a>
           </p>
           <p class="contact-text">
             <a class="text-decoration-none" href="../thoughts.html">thoughts</a>
