going to meet you + meowlody photo updates

--- a/pages/projects/going-to-meet-you.html
+++ b/pages/projects/going-to-meet-you.html
@@ -65,7 +65,28 @@
             <div class="portfolio-desc width-70">
               <div class="portfolio-text">
                 <p>
-                    documentation in progress
+                  documentation in progress
+                </p>
+                <p>
+                  <i>going to meet you</i>  is a physical tower-building and balance game 
+                  that follows a soul as it climbs up a tree and recounts the events of its 
+                  life. 
+                  <br>
+                </p>
+                <p>
+                  Summary of Post-Mortem Thoughts
+                  <!-- https://docs.google.com/document/d/1y-E300GM9ZzLVWMU--DbehRsyUjfGA73A9zmw2oJksU/edit -->
+                </p>
+                <p>
+                  Instructions: 
+                  <br> 
+                  Memory Deck: 
+                  <!-- https://drive.google.com/drive/u/0/folders/1mWS4sEUiqBQBRplRKiC29qinaVlVwhoB -->
+                </p>
+                
+                <p>
+                  Made for ARTG 129-02: Little Story Games 
+                  taught by Elizabeth Swensen
                 </p>
               </div>
             </div>
@@ -73,29 +94,26 @@
               <br>
               <table class="padding-2">
                 <tr>
+                    <img style="width: 200%" src="../../img/going-to-meet-you/in-play.jpg" alt="">
+                </tr>
+                <tr>
                   <td>
-                    <!-- <img src="../../img/stuff-in-a-room/spectacular-poster.png" alt=""> -->
+                    <img src="../../img/going-to-meet-you/box-packaging.jpg" alt="">
+                  </td>
+                  <td>
+                    <img src="../../img/going-to-meet-you/base.jpg" alt="">
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <br>
+                    <img src="../../img/going-to-meet-you/branch-piece-ex.jpg" alt="">
+                  </td>
+                  <td>
+                    <img src="../../img/going-to-meet-you/trunk-piece-ex.jpg" alt="">
                   </td>
                 </tr>
                 <tr>
-                  <td>
-                    <!-- <img src="../../img/stuff-in-a-room/spectacular-program-1.png" alt=""> -->
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <br>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <!-- <img src="../../img/stuff-in-a-room/spectacular-program-2.png" alt=""> -->
-                  </td>
+                  
                 </tr>
               </table>
             </div>
