--- a/pages/projects/stuff-in-a-room.html
+++ b/pages/projects/stuff-in-a-room.html
@@ -137,28 +137,23 @@
               <br>
               <table class="padding-2">
                 <tr>
-                  <td>
                     <img src="../../img/stuff-in-a-room/spectacular-poster.png" alt="">
-                  </td>
                 </tr>
                 <tr>
-                  <td>
-                    <br>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
                     <img src="../../img/stuff-in-a-room/spectacular-program-1.png" alt="">
-                  </td>
                 </tr>
                 <tr>
-                  <td>
-                    <br>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
                     <img src="../../img/stuff-in-a-room/spectacular-program-2.png" alt="">
+                </tr>
+                <tr>
+                    <img src="../../img/stuff-in-a-room/setting.JPG" alt="">
+                </tr>
+                <tr>
+                  <td>
+                    <img src="../../img/stuff-in-a-room/clues.jpg" alt="">
+                  </td>
+                  <td>
+                    <img src="../../img/stuff-in-a-room/censored-paper.jpg" alt="">
                   </td>
                 </tr>
               </table>
