Added documentation photos

--- a/pages/projects/wicked-woods.html
+++ b/pages/projects/wicked-woods.html
@@ -65,7 +65,22 @@
             <div class="portfolio-desc width-70">
               <div class="portfolio-text">
                 <p>
-                    documentation in progress
+                  documentation in progress
+                </p>
+                <p>
+                  snappy description of game
+                  <br>
+                </p>
+                <p>
+                  Summary of Post-Mortem Thoughts
+                </p>
+                <p>
+                  Download the game on Itch.io: <a href="https://aliatothsmith.itch.io/the-wicked-woods">https://aliatothsmith.itch.io/the-wicked-woods</a>
+                </p>
+                
+                <p>
+                  Made for ARTG 170-02 
+                  taught by dani wright
                 </p>
               </div>
             </div>
@@ -74,27 +89,12 @@
               <table class="padding-2">
                 <tr>
                   <td>
-                    <!-- <img src="../../img/stuff-in-a-room/spectacular-poster.png" alt=""> -->
+                    <img src="../../img/wicked-woods/card-art-ex.jpg" alt="">
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <br>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <!-- <img src="../../img/stuff-in-a-room/spectacular-program-1.png" alt=""> -->
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <br>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <!-- <img src="../../img/stuff-in-a-room/spectacular-program-2.png" alt=""> -->
+                    <img src="../../img/wicked-woods/map-ex.jpg" alt="">
                   </td>
                 </tr>
               </table>
