GWY update to documenation

--- a/pages/projects/going-to-meet-you.html
+++ b/pages/projects/going-to-meet-you.html
@@ -62,35 +62,28 @@
         <div class="width-100">
           
           <div class="portfolio-item center">
-            <div class="portfolio-desc width-70">
+            <div class="portfolio-desc">
               <div class="portfolio-text">
-                <p>
-                  documentation in progress
-                </p>
                 <p>
                   <i>going to meet you</i>  is a physical tower-building and balance game 
                   that follows a soul as it climbs up a tree and recounts the events of its 
-                  life. 
+                  life. The player alternates stacking 'branches' and 'trunks'. In between each stack, the player must move the soul, represented by a white clay figurine onto a new section of branch. When the figure is moved the previous space is coved by a card from the 'memory deck' that reveals a snippet of the soul's ongoing monologue. If the tree falls, the rest of the memory deck is torn up and tossed haphazardly into the box, forever obsuring the soul's story and resolution.
                   <br>
                 </p>
                 <p>
-                  Summary of Post-Mortem Thoughts
-                  <!-- https://docs.google.com/document/d/1y-E300GM9ZzLVWMU--DbehRsyUjfGA73A9zmw2oJksU/edit -->
+                  While making this game, I was focused on challenging my aesthetic design skills and creating a game that was consistent through all of its pieces: from theme to visuals to mechanics. I started with the stacking mechanic and the idea of finality. From those mechanics, I decided that the themes of nature and death would fit well for the visual aesthetic. Those themes produced a narrative that deals with the fear of regret which I felt also paired nicely with the mechanics. With these main pillars decided on, I was able to flex my physical construction muscles to create over 50 'tree' pieces, each of which had to snap onto each other in order to create the hight and resulting uncertainty I was going for. Unexpectedly, I also learned about how to size prints correctly and what color values to use for online viewing verses physical printing, as I compiled the memory deck over many iterations.
                 </p>
                 <p>
-                  Instructions: 
+                  <a href="../../img/going-to-meet-you/gmy-instructions+memory-deck.pdf" target="blank">Instructions and Memory Deck</a>
                   <br> 
-                  Memory Deck: 
-                  <!-- https://drive.google.com/drive/u/0/folders/1mWS4sEUiqBQBRplRKiC29qinaVlVwhoB -->
                 </p>
-                
                 <p>
                   Made for ARTG 129-02: Little Story Games 
                   taught by Elizabeth Swensen
                 </p>
               </div>
             </div>
-            <div class="width-40">
+            <div class="portfolio-img">
               <br>
               <table class="padding-2">
                 <tr>
