--- a/pages/projects/stuff-in-a-room.html
+++ b/pages/projects/stuff-in-a-room.html
@@ -65,8 +65,8 @@
             <div class="portfolio-desc width-70">
               <div class="portfolio-text">
                 <p>
-                  This interactive experience was the culmination of 3 weeks of work, 
-                  30 artists and 1 instructor. It debuted for one day only and was taken down 
+                  This interactive experience was the culmination of 3 weeks of work and
+                  30 artists. It debuted for one day only and was taken down 
                   immediately after, but the experience still resonates with me today.
                   It featured 5 different experiences, each made by 
                   a different sub-group of the collective. 
@@ -86,8 +86,6 @@
                   I also designed the poster and program for the event.
                   <br><br><br>
                   Credits:
-                  <br><br>
-                  Instructor: Patrick Michael Ballard
                   <br><br>
                   The Great and Noble Cardboard Contest:
                   <br>Sloane Morton
@@ -129,7 +127,7 @@
                   Open Closets: Emotions Belonging
                   <br>Jace Waterman
                   <br><br>
-                  Made for ARTG 134 at UCSC
+                  Supported by Patrick Michael Ballard
                 </p>
               </div>
             </div>
