Updated Project Summaries

--- a/pages/projects/meowlody.html
+++ b/pages/projects/meowlody.html
@@ -65,20 +65,24 @@
             <div class="portfolio-desc width-70">
               <div class="portfolio-text">
                 <p>
-                  documentation in progress
+                  <i>Meowlody</i> is a rhythm game where you work to hit the beats in time in order to build your cat's cat tower. If you miss a note, the tower becomes unbalanced and the cat falls. As a collaboration between 4 artists, it was an excellent exercise in team management and collaboration. It was made with Construct 3.
                 </p>
                 <p>
-                  snappy summary of the game
-                  <br>
+                  I worked alongside another artist to create the songs and beat patterns for this game. We mainly used Reaper in tandem with the free Spitfire Audio LABS plug-in and libraries. We didn't start out with a great understanding of song writing, but as we researched and experimented our experience grew. It was energizing to work with a partner and to have someone to bounce ideas off of. We meet every week for at least an hour (usually more) outside of group meeting times to work on the songs. The consistent schedule really helped us to prevent procrastination and spread out the workload.
                 </p>
                 <p>
-                  Summary of Post-Mortem Thoughts
-                  <!--  -->
+                  We also had to figure out how to line up the beats in game with the beats of the song, because Construct3 was not designed with rhythm games in mind. We spent hours experimenting with the timings and implementing our solutions into the game itself.
                 </p>
                 <p>
-                  Play it on Itch.io: 
+                  Play it on Itch.io: <a href="https://aliatothsmith.itch.io/meowlody">https://aliatothsmith.itch.io/meowlody</a>
                 </p>
-                
+                <p>
+                  Credits: <br>
+                  Sunny Gai: Artist, UI Designer, Sound Effects <br>
+                  Sunny Han: Main Programmer, Gameplay Design <br>
+                  Avery Corales: Sound Co-Lead, Level Designer <br>
+                  Alia Toth-Smith: Sound Co-Lead, Supplemental Programmer
+                </p>
                 <p>
                   Made for ARTG 120
                   taught by Elizabeth Swensen
