--- a/pages/projects/stuff-in-a-room.html
+++ b/pages/projects/stuff-in-a-room.html
@@ -74,7 +74,7 @@
                   I mainly participated in the group <i>It's Always 9:07</i>. Our experience 
                   was an escape room with a focus on liminality. It was set in a waiting room 
                   and participants would have to solve puzzles in order to open a box, the 
-                  contents of which are not stated. 
+                  contents of which were not stated. 
                   <br><br>
                   The summary of my group's experience written for the event was as follows:
                   <br><br>
