Updated role descriptions

--- a/pages/projects/stuff-in-a-room.html
+++ b/pages/projects/stuff-in-a-room.html
@@ -57,7 +57,7 @@
     <div class='main'>
       <div class='padding-2'>
         <h1 class='padding-2 padding-bottom-0 margin-0 center-text'>Stuff in a Room (Spectacular Experiences)</h1>
-        <p class='margin-0 center-text'>Feb. 14th - Mar. 17th, 2023</p>
+        <p class='margin-0 center-text'>Feb. 14th - Mar. 17th, 2023, Gameplay Designer and Set Designer</p>
 
         <div class="width-100">
           
