--- a/pages/projects/world-moves-on.html
+++ b/pages/projects/world-moves-on.html
@@ -57,7 +57,7 @@
     <div class='main'>
       <div class='padding-2'>
         <h1 class='padding-2 padding-bottom-0 margin-0 center-text'>The World Moves On</h1>
-        <p class='margin-0 center-text'>Fall 2021</p>
+        <p class='margin-0 center-text'>Fall 2021, Narrative Designer and Visual Designer</p>
 
         <div class="padding-2 width-100">
           
