--- a/pages/projects/going-to-meet-you.html
+++ b/pages/projects/going-to-meet-you.html
@@ -57,7 +57,7 @@
     <div class='main'>
       <div class='padding-2'>
         <h1 class='padding-2 padding-bottom-0 margin-0 center-text'>going to meet you</h1>
-        <p class='margin-0 center-text'>Winter 2023</p>
+        <p class='margin-0 center-text'>Winter 2023, Gameplay Designer, Narrative Designer, Layout Designer, Artist</p>
 
         <div class="width-100">
           
