--- a/pages/projects/meowlody.html
+++ b/pages/projects/meowlody.html
@@ -57,7 +57,7 @@
     <div class='main'>
       <div class='padding-2'>
         <h1 class='padding-2 padding-bottom-0 margin-0 center-text'>Meowlody</h1>
-        <p class='margin-0 center-text'>Spring 2023</p>
+        <p class='margin-0 center-text'>Spring 2023, Sound Co-Lead and Supplemental Programmer</p>
 
         <div class="width-100">
           
