--- a/pages/projects/wicked-woods.html
+++ b/pages/projects/wicked-woods.html
@@ -57,7 +57,7 @@
     <div class='main'>
       <div class='padding-2'>
         <h1 class='padding-2 padding-bottom-0 margin-0 center-text'>The Wicked Woods</h1>
-        <p class='margin-0 center-text'>Fall 2023</p>
+        <p class='margin-0 center-text'>Fall 2023, Gameplay Designer, Layout Designer, Artist</p>
 
         <div class="width-100">
           
