--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               
               <div class="portfolio-text">
                 <h2><a class="text-decoration-none" href="pages/projects/wicked-woods.html">The Wicked Woods</a></h2>
-                <p class="date">Fall 2023, All Roles (Independent Project)</p>
+                <p class="date">Fall 2023, Gameplay Designer, Layout Designer, Artist</p>
                 <p>
                   <i>Reflect, record, and grow.<br>
                     a journaling/writing game inspired by the deep forest
@@ -153,7 +153,7 @@
               
               <div class="portfolio-text">
                 <h2><a class="text-decoration-none" href="pages/projects/going-to-meet-you.html">going to meet you</a></h2>
-                <p class="date">Winter 2023, All Roles (Independent Project)</p>
+                <p class="date">Winter 2023, Gameplay Designer, Narrative Designer, Layout Designer, Artist</p>
                 <p>
                   <i>A soul climbs the tree of it's life until it all falls down. A dexterity game.</i>
                 </p>
